src/test/rustdoc-ui/error-in-impl-trait/trait-alias.stderr
error[E0433]: failed to resolve: could not resolve path `error::_in::impl_trait::alias`
  --> $DIR/trait-alias.rs:8:5
   |
LL |     error::_in::impl_trait::alias()
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ could not resolve path `error::_in::impl_trait::alias`
   |
   = note: this error was originally ignored because you are running `rustdoc`
   = note: try running again with `rustc` or `cargo check` and you may get a more detailed error

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
